2026-02-16T01:46:38Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/22047378359 # 879
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2026-02-16
* notice: last 14d: unq all: 1 1
* notice: prev accum: outdated-unq outdated-all / unq all: 37 136 / 37 136
* notice: next accum: outdated-unq outdated-all / unq all: 37 136 / 38 137
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2026-01-21 2026-01-22 2026-01-23 2026-01-24 2026-01-25 2026-01-26 2026-01-27 2026-01-28 2026-01-29 2026-01-30] / [2026-02-07]

2026-02-15T01:50:27Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/22027791464 # 878
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2026-02-15
* notice: last 14d: unq all: 0 0
* notice: prev accum: outdated-unq outdated-all / unq all: 37 136 / 37 136
* notice: next accum: outdated-unq outdated-all / unq all: 37 136 / 37 136
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [] / []

2026-02-14T01:41:50Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/22008799946 # 877
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2026-02-14
* notice: last 14d: unq all: 0 0
* notice: prev accum: outdated-unq outdated-all / unq all: 37 136 / 37 136
* notice: next accum: outdated-unq outdated-all / unq all: 37 136 / 37 136
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2026-01-19 2026-01-20 2026-01-21 2026-01-22 2026-01-23] / []
