@@ -1,3 +1,12 @@
+2026-02-17T01:45:13Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/22083077557 # 880
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2026-02-17
+* notice: last 14d: unq all: 0 0
+* notice: prev accum: outdated-unq outdated-all / unq all: 37 136 / 38 137
+* notice: next accum: outdated-unq outdated-all / unq all: 37 136 / 37 136
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [] / []
+
 2026-02-16T01:46:38Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/22047378359 # 879
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2026-02-16
